2008-05-31  Eli Zaretskii  <eliz@gnu.org>

	* README.W32.template: Remove obsolete text about non-support for
	-jN without Unixy shell.  Remove obsolete text about not supplying
	Visual Studio project files (we do supply them).  Modify text to
	prefer GCC builds to MSC builds.

2008-04-02  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* doc/make.texi (Empty Targets): Fix typo.

2008-03-27  Paul Smith  <psmith@gnu.org>

	Fix Savannah bug #22379:
	* ar.c (ar_glob_match): Zero the allocated structure.
	* read.c (parse_file_seq): Ditto.

2008-03-08  Brian Dessent  <brian@dessent.net>

	* maintMakefile: Update Translation Project location.

2008-01-26  Eli Zaretskii  <eliz@gnu.org>

	* variable.c (target_environment): Don't use shell_var if its
	`value' field is NULL.

2007-12-22  Eli Zaretskii  <eliz@gnu.org>

	Suggested by Juan Manuel Guerrero <juan.guerrero@gmx.de>:

	* Makefile.DOS.template (info_TEXINFOS): Remove unused variable.
	(TEXINFOS): Value changed to `doc/make.texi'.
	(.SUFFIXES): Use .texi instead of .texinfo.
	(make.info, make.dvi): Depend on doc/make.texi.
	(.texi.info): New target, instead of ".texinfo.info".  Change -I
	switch to $(MAKEINFO) to look in doc/.  Use --no-split.
	(.texi): New target, instead of ".texinfo".  Change -I switch to
	$(MAKEINFO) to look in doc/.  Use --no-split.
	(.texi.dvi): New target, instead of ".texinfo.dvi".  Change -I
	switch to $(MAKEINFO) to look in doc/.
	(install-info-am, uninstall-info): Don't look for "*.i[0-9]" and
	"*.i[0-9][0-9]" (due to --no-split above).
	(noinst_TEXINFOS, TEXI2HTML, TEXI2HTML_FLAGS): New variables.
	(html, make_1.html): New targets.
	(.PHONY): Add "html".
	(.SUFFIXES): Add .html.

2007-12-22  Juan Manuel Guerrero  <juan.guerrero@gmx.de>  (tiny change)

	* configh.dos.template [__DJGPP__]: Replace HAVE_SYS_SIGLIST with
	HAVE_DECL_SYS_SIGLIST.

	* job.c (child_execute_job): Remove __MSDOS__ because MSDOS/DJGPP
	build does not use child_execute_job.
